# simpleOS

./: .gitignore  CMakeLists.txt  README.md  bochsrc  mbr.s
boot/: CMakeLists.txt  loader.nasm  mbr.nasm
boot/include/: boot.inc
device/: CMakeLists.txt  timer.cpp
device/include/: timer.hpp
kernel/: CMakeLists.txt  debug.cpp  init.cpp  interrupt.cpp  kernel.nasm  main.cpp  memory.cpp
kernel/include/: debug.hpp  global.hpp  init.hpp  interrupt.hpp  interrupt_t.hpp  memory.hpp  memory_t.hpp
lib/: CMakeLists.txt  stdint.hpp  string.cpp  string.hpp
lib/kernel/: CMakeLists.txt  bitmap.cpp  bitmap.hpp  io.hpp  list.cpp  list.hpp  print.hpp  print.nasm
thread/: CMakeLists.txt  switch.nasm  thread.cpp
thread/include/: thread.hpp  thread_t.hpp
